--- a/Cover/cover.html
+++ b/Cover/cover.html
@@ -10,7 +10,8 @@
 <body>
     <div class="cover-container">
         <h1 class="cover-title">Welcome to the Pocket Full of Life Website</h1>
-        <p class="cover-subtitle">Your gateway to amazing content!!</p>
         <a href="aboutthegame.html" class="cover-button">About the Game</a><br>
         <a href="https://..." class="cover-button">Link to Game on Itch.io</a>
     </div>
+</body>
+</html>
