--- a/Cover/aboutthegame.html
+++ b/Cover/aboutthegame.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About the Game - Pocket Full of Life</title>
-    <link rel="stylesheet" href="pagestyle.css">
+    <link rel="stylesheet" href="coverstyle.css">
 
 </head>
 <body>
     <div class="about-container">
         <h1 class="about-title">About Pocket Full of Life</h1>
-        <p class="about-text">Pocket Full of Life is a psychological horror RPG about following the life of a teenage girl whose passion is her sport—only to have it slowly drive her away from everything that matters. Her pockets are limited, and so is her time. To make room for her ambition, you have to force her to throw away the "unnecessary" things: her sleep, her family, her connections, and her memories. But as Tico isolates herself to become perfect, a lurking Entity appears. It feeds on her anxiety and stress, proving that her passion might possibly be a parasite sucking the life out of her.
-Players will explore an unreliable world that shifts with Tico’s mental state; as her stress rises, the UI distorts, friendly text glitches into insults, and the environment decays from a vibrant high school into a grey, lonely void. Mini-games—like catching butterflies in her stomach or counting sheep—will frequently appear to regain sleep, confidence, and lower anxiety; these serve as deep metaphors for managing her panic and insomnia. 
-Along Tico’s isolating journey to become perfect, a lurking Entity appears, feeding on her anxiety and proving that her passion might actually be a parasite sucking the life out of her. Will you be able to save Tico from quitting her passion, or will you listen to the advice given?</p>
+        <p class="about-text" style="text-indent: 50px;">
+            Pocket Full of Life is a psychological horror RPG about following the life of a teenage girl whose passion is her sport—only to have it slowly drive her away from everything that matters. Her pockets are limited, and so is her time. To make room for her ambition, you have to force her to throw away the "unnecessary" things: her sleep, her family, her connections, and her memories. But as Tico isolates herself to become perfect, a lurking Entity appears. It feeds on her anxiety and stress, proving that her passion might possibly be a parasite sucking the life out of her.<br>
+            Players will explore an unreliable world that shifts with Tico’s mental state; as her stress rises, the UI distorts, friendly text glitches into insults, and the environment decays from a vibrant high school into a grey, lonely void. Mini-games—like catching butterflies in her stomach or counting sheep—will frequently appear to regain sleep, confidence, and lower anxiety; these serve as deep metaphors for managing her panic and insomnia.<br>
+            Along Tico’s isolating journey to become perfect, a lurking Entity appears, feeding on her anxiety and proving that her passion might actually be a parasite sucking the life out of her. Will you be able to save Tico from quitting her passion, or will you listen to the advice given?
+        </p>
     </div>
 </body>
 </html>
