--- a/Cover/cover.html
+++ b/Cover/cover.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pocket Full of Life Web</Label></title>
+    <title>Pocket Full of Life Web</title>
     <link rel="stylesheet" href="coverstyle.css">
 </head>
 
 <body>
     <div class="cover-container">
         <h1 class="cover-title">Welcome to the Pocket Full of Life Website</h1>
-        <a href="aboutthegame.html" class="cover-button">About the Game</a><br>
-        <a href="https://..." class="cover-button">Link to Game on Itch.io</a>
+
+        <div class="cover-pathways">
+            <a href="aboutthegame.html" class="cover-pathways1">About the Game</a><br>
+            <a href="https://..." class="cover-pathways2">Link to Game on Itch.io</a>
+        </div>
     </div>
 </body>
 </html>
